update spring-boot to version 2.2.2